[gd_scene load_steps=4 format=2]

[ext_resource path="res://Location.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33, 32 )

[node name="Location" type="Node2D"]
position = Vector2( 5, 20 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 32, 32 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Sprite"]
position = Vector2( -32, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( 32, 32 )
z_index = 17
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 2.0
margin_top = -16.0
margin_right = 64.0
margin_bottom = -2.0
text = "Location1"

[connection signal="input_event" from="Sprite/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Sprite/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/Area2D" to="." method="_on_Area2D_mouse_exited"]
